--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
     "start": "npm run preview"
   },
   "dependencies": {
-    "@audius/sdk": "latest",
     "@audius/harmony": "latest",
+    "@audius/sdk": "latest",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
