--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@audius/harmony": "latest",
     "@audius/sdk": "latest",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
