--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.11"
   }
 }
