--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
