--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,32 @@
     "@audius/harmony": "latest",
     "@audius/sdk": "latest",
     "@scure/base": "^1.1.7",
+    "array-pack-2d": "0.1.1",
+    "array-range": "1.0.1",
+    "canvas-fit": "1.5.0",
+    "canvas-loop": "1.0.7",
+    "clamp": "1.0.1",
+    "gl-audio-analyser": "1.0.3",
+    "gl-buffer": "2.1.2",
+    "gl-mat4": "1.2.0",
+    "gl-quad": "1.1.3",
+    "gl-shader": "4.2.1",
+    "gl-texture2d": "2.1.0",
+    "gl-vao": "1.3.0",
+    "glsl-noise": "0.0.0",
+    "glsl-random": "0.0.4",
+    "hex-rgb": "1.0.0",
+    "inherits": "2.0.4",
+    "lerp": "1.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "ndarray": "^1.0.19",
+    "orbit-controls": "0.0.1",
+    "perspective-camera": "2.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web-audio-analyser": "2.0.1",
+    "webgl-context": "2.2.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
@@ -30,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-glslify": "2.0.2"
   }
 }
