--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@audius/harmony": "latest",
     "@audius/sdk": "latest",
     "@scure/base": "^1.1.7",
+    "@types/react-lottie": "^1.2.10",
     "array-pack-2d": "0.1.1",
     "array-range": "1.0.1",
     "canvas-fit": "1.5.0",
@@ -38,10 +39,12 @@
     "perspective-camera": "2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.5.4",
+    "react-lottie": "^1.2.4",
+    "react-modern-drawer": "^1.3.1",
     "react-use": "^17.5.1",
     "web-audio-analyser": "2.0.1",
-    "webgl-context": "2.2.0"
+    "webgl-context": "2.2.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
